--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+    <!-- Arshanda Geulis Nawajaputri 105222045 -->
+     <!-- Faris Farhan 105222013 -->
     <section id="home" class="section">
         <h1>Selamat datang!!!</h1>
         <p>Coba mainkan quis ini!</p>
