--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Arshanda Geulis Nawajaputri 105222045 -->
-     <!-- Faris Farhan 105222013 -->
     <section id="home" class="section">
         <h1>Selamat datang!!!</h1>
         <p>Coba mainkan quis ini!</p>
@@ -17,35 +15,13 @@
 
     <section id="playerForm" class="section hidden">
         <h2>Masukkan data kamu</h2>
-        <input type="text" id="name" placeholder="Masukkan Nama Lengkap" required>
-        <input type="text" id="nim" placeholder="Masukkan NIM" required>
-        <button onclick="startQuiz()">Mulai Quiz</button>
-    </section>
-
-    <section id="quiz" class="section hidden">
-        <div id="questionContainer">
-            <p id="questionText"></p>
-            <div id="answerOptions"></div>
-        </div>
-        <button onclick="nextQuestion()">Next Question</button>
-        <p id="questionStatus">Question <span id="currentQuestion">1</span> of <span id="totalQuestions">5</span></p>
-        <p id="liveScore">Score: <span id="scoreDisplay">0</span></p>
-        <p id="timer">Waktu tersisa: 30 detik</p>
-    </section>
-
-    <div id="popup" class="popup hidden">
-        <p id="popupMessage"></p>
-    </div>
-
-    <section id="result" class="section hidden">
-        <h2>Hasil Quiz</h2>
-        <p>Nama: <span id="resultName"></span></p>
-        <p>NIM: <span id="resultNim"></span></p>
-        <p>Total Score: <span id="totalScore"></span></p>
-        <button onclick="restartQuiz()">Ulang Quiz</button>
+        <form action="quiz.php" method="post">
+            <input type="text" id="name" name="name" placeholder="Masukkan Nama" required>
+            <input type="text" id="nim" name="nim" placeholder="Masukkan NIM" required>
+            <button onclick="startQuiz()">Mulai Quiz</button>
+        </form> 
     </section>
 
     <script src="script.js"></script>
-
 </body>
 </html>
